@@ -19,6 +19,7 @@ Bug fixes:
 	* Don't clear the undo history when saving the project (BUG 470727)
 	* Properly react on orientation changes in the worksheet properties explorer
 	* In the collections of example projects, color maps and data sets allow also to search for sub-strings and do the search case-insensitive
+	* Properly save and load the property "visible" for box and bar plots in the project file.
 
 -----2.10.0 (21.03.2023) -----
 New features:
